[package]
name = "cw-voting"
version = "0.11.0"
authors = ["Taariq Levack <levackt@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Simple CosmWasm contract for voting"
repository = "https://github.com/InterWasm/cw-contracts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-schema = "1.1.0"
cw-storage-plus = "0.13.4"
thiserror = "1.0.31"

[dev-dependencies]
